--- a/src/Stocks/StockLimit.fxml
+++ b/src/Stocks/StockLimit.fxml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Stocks.StockLimit"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="590.0" minWidth="1125.0" style="-fx-background-color: #dce2e7;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Admin.AdminController">
+   <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#84b2d1" height="549.0" layoutX="49.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1033.0" />
+      <TextField layoutX="84.0" layoutY="97.0" minHeight="40.0" minWidth="340.0" promptText="Enter First Name">
+         <font>
+            <Font name="Verdana Bold" size="14.0" />
+         </font>
+      </TextField>
+      <Button layoutX="916.0" layoutY="97.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" style="-fx-background-color: #326e9c;" text="SEARCH" textFill="WHITE">
+         <font>
+            <Font name="Verdana Bold" size="14.0" />
+         </font>
+      </Button>
+      <TableView fx:id="PharmacistTable" layoutX="109.0" layoutY="173.0" opacity="0.87" prefHeight="355.0" prefWidth="906.0">
+         <columns>
+            <TableColumn prefWidth="75.0" text="SELECT" />
+            <TableColumn fx:id="Sno" prefWidth="77.5999755859375" text="S.NO." />
+            <TableColumn fx:id="F_name" prefWidth="111.20001220703125" text="FIRST NAME" />
+            <TableColumn fx:id="L_name" prefWidth="118.4000244140625" text="LAST NAME" />
+            <TableColumn fx:id="Email" prefWidth="122.39997863769531" text="EMAIL ID" />
+            <TableColumn fx:id="DOB" prefWidth="129.599853515625" text="DATE OF BIRTH" />
+            <TableColumn fx:id="M_num" prefWidth="132.0" text="MOBLIE NO." />
+            <TableColumn fx:id="QualificationP" prefWidth="143.19998779296873" text="QUALIFICATION" />
+         </columns>
+      </TableView>
+      <Text fill="#0c3d6b" layoutX="84.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pharmacists List">
+         <font>
+            <Font name="Verdana Bold" size="16.0" />
+         </font>
+      </Text>
+      <TextField layoutX="499.0" layoutY="97.0" minHeight="40.0" minWidth="340.0" promptText="Enter Login Id">
+         <font>
+            <Font name="Verdana Bold" size="14.0" />
+         </font>
+      </TextField>
+   </children>
 </AnchorPane>
