--- a/src/User/User.fxml
+++ b/src/User/User.fxml
@@ -75,12 +75,12 @@
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="344.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="MY ORDERS" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="344.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" onAction="#MyOrders" style="-fx-background-color: #202020;" text="MY ORDERS" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="394.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" style="-fx-background-color: #202020;" text="MEDICINES" textFill="WHITE">
+                  <Button contentDisplay="CENTER" layoutX="28.0" layoutY="394.0" minHeight="40.0" minWidth="220.0" mnemonicParsing="false" onAction="#Medicines" style="-fx-background-color: #202020;" text="MEDICINES" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
