--- a/bin/Admin/MM-Search.fxml
+++ b/bin/Admin/MM-Search.fxml
@@ -1,8 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17">
+   <children>
+      <AnchorPane layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="590.0" minWidth="1125.0" style="-fx-background-color: #dce2e7;">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#84b2d1" height="549.0" layoutX="49.0" layoutY="22.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1019.0" />
+            <TextField layoutX="109.0" layoutY="97.0" minHeight="40.0" minWidth="247.0" prefHeight="40.0" prefWidth="325.0" promptText="Enter Drug Name">
+               <font>
+                  <Font name="Verdana Bold" size="14.0" />
+               </font>
+            </TextField>
+            <Button layoutX="918.0" layoutY="97.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" onAction="#Data" style="-fx-background-color: #326e9c;" text="SEARCH" textFill="WHITE">
+               <font>
+                  <Font name="Verdana Bold" size="14.0" />
+               </font>
+            </Button>
+            <TableView fx:id="PharmacistTable" layoutX="107.0" layoutY="170.0" opacity="0.87" prefHeight="355.0" prefWidth="890.0">
+               <columns>
+                  <TableColumn fx:id="C_Sno" prefWidth="77.5999755859375" text="S.NO." />
+                  <TableColumn fx:id="C_F_name" prefWidth="111.20001220703125" text="DRUG ID" />
+                  <TableColumn fx:id="C_L_name" prefWidth="118.4000244140625" text="DRUG NAME" />
+                  <TableColumn fx:id="C_Email" prefWidth="122.39997863769531" text="COMPANY" />
+                  <TableColumn fx:id="C_M_num" prefWidth="139.20001220703125" text="CATEGORY" />
+                  <TableColumn prefWidth="123.199951171875" text="PRICE" />
+                  <TableColumn fx:id="C_QualificationP" prefWidth="196.0" text="QUALIFICATION" />
+               </columns>
+            </TableView>
+            <Text fill="#0c3d6b" layoutX="84.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PHARMACIST">
+               <font>
+                  <Font name="Verdana Bold" size="16.0" />
+               </font>
+            </Text>
+            <TextField layoutX="504.0" layoutY="97.0" minHeight="40.0" minWidth="280.0" prefHeight="40.0" prefWidth="375.0" promptText="Enter Drug Id">
+               <font>
+                  <Font name="Verdana Bold" size="14.0" />
+               </font>
+            </TextField>
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
-
