--- a/src/Pharmacist/Pharmacist.fxml
+++ b/src/Pharmacist/Pharmacist.fxml
@@ -85,7 +85,7 @@
                         <Font name="Verdana" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="25.0" layoutY="371.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="SALES" textFill="WHITE">
+                  <Button layoutX="25.0" layoutY="371.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#Sales" prefHeight="40.0" prefWidth="220.0" style="-fx-background-color: #202020;" text="SALES" textFill="WHITE">
                      <font>
                         <Font name="Verdana" size="14.0" />
                      </font>
